# climate-nexus-project

./: README.md  pyproject.toml
climate_risk_index/: __init__.py
climate_risk_index/data/: __init__.py
climate_risk_index/features/: __init__.py
climate_risk_index/indicators/: __init__.py
climate_risk_index/modeling/: __init__.py
climate_risk_index/utils/: __init__.py
climate_risk_index/visualization/: __init__.py
config/: data_sources.yml  project.yml  sectors.yml
data/processed/: sample_country_sector_risk_scores.csv
docs/: data_dictionary.md  methodology.md
scripts/: build_index.py  export_site_data.py
site/: index.html
site/assets/css/: styles.css
site/assets/data/: sample_country_sector_risk_scores.json
site/assets/js/: app.js
tests/: test_project_scaffold.py
